feat(adicionado tela de resultados da busca de livros)

--- a/templates/both/buscarLivros.html
+++ b/templates/both/buscarLivros.html
@@ -13,9 +13,11 @@
       <div
         style="width: 92px; height: 54px; left: 0px; top: 0px; position: absolute; background: #163A5B; border-radius: 10px">
       </div>
-      <div
+      <a
+        href="{% url 'resultadoBuscaLivro' %}"
         style="left: 7px; top: 12px; position: absolute; color: white; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-        Buscar</div>
+        Buscar
+      </a>
     </div>
 
     <div style="width: 446px; height: 66px; left: 0px; top: 0px; position: absolute">
@@ -39,7 +41,8 @@
 
   <div
     style="width: 246px; height: 52px; left: 808px; top: 194px; position: absolute; text-align: center; color: black; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-    Buscar de livros</div>
+    Buscar livros
+  </div>
 
   <div style="width: 114px; height: 48px; left: 248px; top: 184px; position: absolute">
     <div
