--- a/templates/adm/cadastroDeLivro.html
+++ b/templates/adm/cadastroDeLivro.html
@@ -1,33 +1,53 @@
+{% load static %}
+
 <div style="width: 1440px; height: 1024px; position: relative; background: white">
   <div style="width: 1019px; height: 760px; left: 242px; top: 141px; position: absolute; background: #FDF9F9; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); border-radius: 16px; border: 1px black solid"></div>
-  <img style="width: 409px; height: 760px; left: 242px; top: 141px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px black solid" src=".\..\assets\Logo.png" />
-  <div style="width: 238px; height: 52px; left: 830px; top: 800px; position: absolute">
-    <div style="width: 238px; height: 52px; left: 0px; top: 0px; position: absolute; background: #163A5B; border-radius: 10px"></div>
-    <div style="width: 156px; left: 47px; top: 6px; position: absolute; color: white; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word">Cadastrar</div>
-  </div>
+  <img style="width: 409px; height: 760px; left: 242px; top: 141px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px black solid" src="{% static 'images/Logo.png' %}" alt="Logo"/>
+  <form method="POST">
+    {% csrf_token %}
   <div style="width: 470px; height: 75px; left: 720px; top: 658px; position: absolute">
     <div style="width: 470px; height: 0px; left: 0px; top: 75px; position: absolute; border: 1px black solid"></div>
-    <div style="left: 6px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">Gênero</div>
+    <div style="left: 6px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+      {{ bookForm.theme.label_tag }}
+      {{ bookForm.theme }}
+    </div>
   </div>
   <div style="height: 59.98px; left: 720px; top: 585px; position: absolute">
     <div style="width: 470px; height: 0px; left: 0px; top: 59.98px; position: absolute; opacity: 0.70; border: 1px black solid"></div>
-    <div style="left: 0.01px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">ISBN</div>
+    <div style="left: 0.01px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+      {{ bookForm.ISBN.label_tag }}
+      {{ bookForm.ISBN }}
+    </div>
   </div>
   <div style="width: 470px; height: 84.05px; left: 720px; top: 488px; position: absolute">
     <div style="width: 470px; height: 0px; left: 0px; top: 84.05px; position: absolute; border: 1px black solid"></div>
-    <div style="left: 6.08px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">Autor</div>
+    <div style="left: 6.08px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+      {{ bookForm.author.label_tag }}
+      {{ bookForm.author }}
+    </div>
   </div>
   <div style="width: 470px; height: 81.03px; left: 720px; top: 394px; position: absolute">
     <div style="width: 470px; height: 0px; left: 0px; top: 81.03px; position: absolute; border: 1px black solid"></div>
-    <div style="left: 10.02px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">Subtítulo</div>
+    <div style="left: 10.02px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+      {{ bookForm.subtitle.label_tag }}
+      {{ bookForm.subtitle }}
+    </div>
   </div>
   <div style="width: 470px; height: 75px; left: 720px; top: 296px; position: absolute">
     <div style="width: 470px; height: 0px; left: 0px; top: 75px; position: absolute; border: 1px black solid"></div>
-    <div style="left: 5.02px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">Título</div>
+    <div style="left: 5.02px; top: 0px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+      {{ bookForm.title.label_tag }}
+      {{ bookForm.title }}
+    </div>
   </div>
+  <div style="width: 238px; height: 52px; left: 830px; top: 800px; position: absolute">
+    <div style="width: 238px; height: 52px; left: 0px; top: 0px; position: absolute; background: #163A5B; border-radius: 10px"></div>
+    <div style="width: 156px; left: 47px; top: 6px; position: absolute; color: white; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word"> <button type="submit">Cadastrar</button></div>
+  </div>
+</form>
   <div style="left: 803px; top: 217px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">Cadastro de livro</div>
   <div style="width: 114px; height: 48px; left: 262px; top: 159px; position: absolute">
     <div style="width: 114px; height: 48px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px"></div>
-    <div style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">Voltar </div>
+    <div style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word"><input type=button value="Voltar" onClick="javascript:history.go(-1);"></div>
   </div>
 </div>
