--- a/templates/adm/menuPrincipalAdm.html
+++ b/templates/adm/menuPrincipalAdm.html
@@ -13,7 +13,7 @@
   </div>
   <div style="width: 425px; height: 76px; left: 744px; top: 517px; position: absolute">
     <div style="width: 425px; height: 76px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 16px"></div>
-    <div style="left: 88px; top: 16px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">Cadastrar livro</div>
+    <div style="left: 88px; top: 16px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word"><a class="btn btn-primary" href="/cadastroLivro">Cadastrar Livro</a></div>
   </div>
   <div style="width: 425px; height: 76px; left: 744px; top: 385px; position: absolute">
     <div style="width: 425px; height: 76px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px"></div>
