--- a/templates/both/buscarLivros.html
+++ b/templates/both/buscarLivros.html
@@ -8,36 +8,27 @@
     style="width: 409px; height: 655px; left: 231px; top: 159px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px black solid"
     src="{% static 'images/Logo.png' %}" alt="Logo" />
 
-  <div style="width: 564px; left: 666px; top: 454px; position: absolute">
+  <form method="POST" style="width: 564px; left: 666px; top: 454px; position: absolute">
+    {% csrf_token %}
+
     <div style="width: 92px; height: 54px; left: 472px; top: 6px; position: absolute">
       <div
         style="width: 92px; height: 54px; left: 0px; top: 0px; position: absolute; background: #163A5B; border-radius: 10px">
       </div>
-      <a
-        href="{% url 'resultadoBuscaLivro' %}"
+      <button type="submit"
         style="left: 7px; top: 12px; position: absolute; color: white; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
         Buscar
-      </a>
+      </button>
     </div>
 
     <div style="width: 446px; height: 66px; left: 0px; top: 0px; position: absolute">
       <div
         style="width: 446px; height: 66px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 20px; border: 1px black solid">
-      </div>
-      <div
-        style="width: 60px; height: 60px; padding: 1.50px; left: 6px; top: 3px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
-        <img style="width: 57px; height: 57px" src="https://via.placeholder.com/57x57" />
+        {{ searchBookForm.title }}
       </div>
 
-      <div style="width: 40px; height: 41px; left: 72px; top: 12px; position: absolute">
-        <img style="width: 24px; height: 37px; left: 8px; top: 2px; position: absolute"
-          src="https://via.placeholder.com/24x37" />
-        <div
-          style="width: 40px; height: 41px; left: 0px; top: 0px; position: absolute; background: linear-gradient(0deg, rgba(127, 127, 127, 0.50) 0%, rgba(127, 127, 127, 0.50) 100%), linear-gradient(0deg, #3D3D3D 0%, #3D3D3D 100%)">
-        </div>
-      </div>
     </div>
-  </div>
+  </form>
 
   <div
     style="width: 246px; height: 52px; left: 808px; top: 194px; position: absolute; text-align: center; color: black; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word">
