feat detalhes do livro

--- a/templates/both/buscarLivros.html
+++ b/templates/both/buscarLivros.html
@@ -41,7 +41,7 @@
     </div>
     <div
       style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-      Voltar </div>
+      <a href="{% url 'menuAdm' %}">Voltar</a> </div>
   </div>
 
 </div>
