--- a/templates/adm/menuPrincipalAdm.html
+++ b/templates/adm/menuPrincipalAdm.html
@@ -33,5 +33,10 @@
     <div style="width: 425px; height: 76px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px"></div>
     <div style="width: 253px; height: 51.45px; left: 82px; top: 12.86px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">Cadastrar adm</div>
   </div>
-  
+  <div style="width: 114px; height: 48px; left: 262px; top: 159px; position: absolute">
+    <div style="width: 114px; height: 48px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px"></div>
+    <div style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">  <form action="{% url 'logout' %}" method="post">
+      {% csrf_token %} 
+      <button type="submit">Logout</button></div>
+  </div>
 </div>
