--- a/templates/aluno/menuPrincipalAluno.html
+++ b/templates/aluno/menuPrincipalAluno.html
@@ -1,13 +1,26 @@
+{% load static %}
+
 <div style="width: 1440px; height: 1024px; position: relative; background: white">
+  
   <div style="width: 1019px; height: 649px; left: 210px; top: 187px; position: absolute; background: #FDF9F9; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); border-radius: 16px; border: 1px black solid"></div>
   <div style="width: 425px; height: 76px; left: 720px; top: 653px; position: absolute">
+    
     <div style="width: 425px; height: 76px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px"></div>
     <div style="left: 104px; top: 16px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">Buscar livros</div>
   </div>
   <div style="width: 425px; height: 76px; left: 720px; top: 411px; position: absolute">
+    
     <div style="width: 425px; height: 76px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px"></div>
-    <div style="left: 69px; top: 15px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">Ver Empréstimos</div>
+    <div style="left: 69px; top: 15px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word"><a class="btn btn-primary" href="/emprestimos">Ver Empréstimos</a></div>
   </div>
   <div style="left: 743px; top: 245px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">Menu Principal (aluno)</div>
-  <img style="width: 424px; height: 649px; left: 210px; top: 187px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px black solid" src="./../assets/Logo.png" />
+ 
+  <img style="width: 424px; height: 649px; left: 210px; top: 187px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px black solid" src="{% static 'images/Logo.png' %}" />
+</div>
+
+<div style="width: 114px; height: 48px; left: 262px; top: 199px; position: absolute">
+  <div style="width: 114px; height: 48px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px"></div>
+  <div style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">  <form action="{% url 'logout' %}" method="post">
+    {% csrf_token %} 
+    <button type="submit">Logout</button></div>
 </div>
