--- a/templates/both/detalhesLivro.html
+++ b/templates/both/detalhesLivro.html
@@ -6,7 +6,7 @@
     <img style="width: 409px; height: 655px; left: 231px; top: 159px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px black solid" src="{% static 'images/Logo.png' %}" alt="Logo" />
     <div style="width: 307.25px; height: 60.63px; left: 783px; top: 621px; position: absolute">
       <div style="width: 307.25px; height: 60.63px; left: 0px; top: 0px; position: absolute; background: #163A5B; border-radius: 10px"></div>
-      <div style="width: 250.02px; height: 31.40px; left: 28.55px; top: 14.08px; position: absolute; text-align: center; color: white; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">Realizar empréstimo</div>
+      <div style="width: 250.02px; height: 31.40px; left: 28.55px; top: 14.08px; position: absolute; text-align: center; color: white; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word"><a href="{% url 'admAlunos' %}">Realizar empréstimo</a></div>
     </div>
     <div style="width: 246px; height: 52px; left: 814px; top: 180px; position: absolute; text-align: center; color: black; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word"><b>{{ book.title }}</b></div>
     <div style="width: 507px; height: 222px; left: 672px; top: 265px; position: absolute">
