--- a/templates/both/buscarLivros.html
+++ b/templates/both/buscarLivros.html
@@ -1,47 +1,24 @@
 {% load static %}
 
-<div style="width: 1440px; height: 1024px; position: relative; background: white">
-  <div
-    style="width: 1019px; height: 655px; left: 248px; top: 159px; position: absolute; background: #FDF9F9; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); border-radius: 16px; border: 1px black solid">
-  </div>
-  <img
-    style="width: 409px; height: 655px; left: 231px; top: 159px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px black solid"
-    src="{% static 'images/Logo.png' %}" alt="Logo" />
+<link rel="stylesheet" href="{% static 'css/buscarLivros.css' %}">
 
-  <form method="POST" style="width: 564px; left: 666px; top: 454px; position: absolute">
-    {% csrf_token %}
+<div class="container">
+  <img src="{% static 'images/Logo.png' %}" class="logo" alt="Logo" />
 
-    <div style="width: 92px; height: 54px; left: 472px; top: 6px; position: absolute">
-      <div
-        style="width: 92px; height: 54px; left: 0px; top: 0px; position: absolute; background: #163A5B; border-radius: 10px">
-      </div>
-      <button type="submit"
-        style="left: 7px; top: 12px; position: absolute; color: white; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-        Buscar
-      </button>
-    </div>
-
-    <div style="width: 446px; height: 66px; left: 0px; top: 0px; position: absolute">
-      <div
-        style="width: 446px; height: 66px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 20px; border: 1px black solid">
-        {{ searchBookForm.title }}
+  <div class="form-container">
+    <form method="POST">
+      <div class="title">Buscar livros</div>
+      {% csrf_token %}
+      
+      <div class="field-button-container">
+        <div class="form-field">
+          {{ searchBookForm.title }}
+        </div>
+        <button class="btn-submit" type="submit">Procurar</button>
       </div>
 
-    </div>
-  </form>
+      <a href="../menuAdm/" class="btn-back">Voltar</a>
 
-  <div
-    style="width: 246px; height: 52px; left: 808px; top: 194px; position: absolute; text-align: center; color: black; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-    Buscar livros
+    </form>
   </div>
-
-  <div style="width: 114px; height: 48px; left: 248px; top: 184px; position: absolute">
-    <div
-      style="width: 114px; height: 48px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px">
-    </div>
-    <div
-      style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-      <a href="{% url 'menuAdm' %}">Voltar</a> </div>
-  </div>
-
 </div>
