--- a/templates/both/login.html
+++ b/templates/both/login.html
@@ -1,67 +1,37 @@
 {% load static %}
 
-<div style="width: 1440px; height: 1024px; position: relative; background: white">
-  <div
-    style="width: 1019px; height: 655px; left: 241px; top: 190px; position: absolute; background: #FDF9F9; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); border-radius: 16px; border: 1px black solid">
-  </div>
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
 
-  <img
-    style="width: 419px; height: 665px; left: 241px; top: 185px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px black solid"
-    src="{% static 'images/Logo.png' %}" alt="Logo">
+<div class="container">
+  <img class="logo" src="{% static 'images/Logo.png' %}" alt="Logo">
 
-  <div
-    style="left: 863px; top: 240px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-    Fazer login
-  </div>
+  <div class="form-container">
 
-  <div
-    style="left: 774px; top: 330px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-    Entre com seu e-mail e senha
-  </div>
-  {% if user.is_authenticated%}
-    <p>salve, {{user.username}} </p>
-    <form action="{% url 'logout' %}" method="post">
-      {% csrf_token %} #csrf_token is very important to have as this is POST request
-      <button type="submit">Logout</button>
-  </form>
-{%else%}
-    <p>NÃO TA LOGADO</p>
-    <a href="{% url 'login' %}">Login</a>
-{%endif%}
-  <form method="POST">
-    {% csrf_token %}
+    <div class="title">Fazer login</div>
+    <div class="subtitle">Entre com seu e-mail e senha</div>  
+    
+    <form method="POST">
+      {% csrf_token %}
   
-    <div style="width: 460px; height: 97px; left: 725px; top: 410px; position: absolute">
-      <div
-        style="left: 174px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-        {{ form.email.label_tag }}
+      <div class="form-field">
+        <label>{{ form.email.label_tag }}</label>
         {{ form.email }}
       </div>
-    </div>
-
-    <div style="width: 450px; height: 89px; left: 730px; top: 521px; position: absolute">
-      <div
-        style="left: 180px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-        {{ form.password.label_tag }}
+  
+      <div class="form-field">
+        <label>{{ form.password.label_tag }}</label>
         {{ form.password }}
       </div>
-    </div>
 
-    <div style="width: 238px; height: 52px; left: 823px; top: 770px; position: absolute">
-      <button type="submit">Entrar</button>
-    </div>
-  </form>
+      <button href="../menuAdm/" class="pasres-btn">Esqueci a senha</button>
 
-  <div style="width: 196px; height: 55px; left: 859px; top: 640px; position: absolute">
-    <button>Esqueci a senha</button>
+      <div class="register-link">
+        Ainda não está cadastrado?
+        <button class="regs-btn">Cadastre-se</button>
+      </div>
+
+      <button class="btn-submit" type="submit">Entrar</button>
+
+    </form>
   </div>
-
-  <div
-    style="width: 316px; height: 40px; left: 720px; top: 709px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-    Ainda não está cadastrado?
-    <button>
-      Cadastre-se
-    </button>
-  </div>
-
 </div>
