--- a/templates/both/resultadoBuscaLivro.html
+++ b/templates/both/resultadoBuscaLivro.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+<link rel="stylesheet" href="{% static 'css/menuPrincipalAdm.css' %}">
+
 <div style="width: 1440px; height: 1024px; position: relative; background: white">
   <div
     style="width: 1019px; height: 655px; left: 249px; top: 159px; position: absolute; background: #FDF9F9; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); border-radius: 16px; border: 1px black solid">
@@ -55,11 +57,7 @@
     {% endfor %}
   </div>
   <div style="width: 114px; height: 48px; left: 249px; top: 170px; position: absolute">
-    <div
-      style="width: 114px; height: 48px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px">
-    </div>
-    <div
-      style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-      <a href="{% url 'buscarLivros' %}">Voltar</a>
+    <div>
+      <a style="text-decoration: none;" class="logoutBtn" href="{% url 'buscarLivros' %}">Voltar</a>
   </div>
 </div>
