--- a/templates/adm/admAlunos.html
+++ b/templates/adm/admAlunos.html
@@ -1,4 +1,6 @@
 {% load static %}
+<link rel="stylesheet" href="{% static 'css/menuPrincipalAdm.css' %}">
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -33,7 +35,7 @@
   <div style="width: 563px; height: 410px; left: 656px; top: 372px; position: absolute; overflow-y:auto;">
 
 
-    <div class="container">
+    <div class="containerM">
       <!-- Trigger the modal with a button -->
     
       <!-- Modal -->
@@ -180,12 +182,13 @@
     <hr>
 
   </div>
-  <div style="width: 114px; height: 48px; left: 249px; top: 170px; position: absolute">
-    <div
-      style="width: 114px; height: 48px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px">
-    </div>
-    <div
-      style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-      <a href="{% url 'buscarLivros' %}">Voltar</a>
+
+
+  <div style="width: 114px; height: 48px; left: 233px; top: 158px; position: absolute">
+    <div>
+      <a style="color:black; text-decoration: none;" class="logoutBtn" href="{% url 'buscarLivros' %}">Voltar</a>
   </div>
 </div>
+
+  
+
