--- a/templates/aluno/emprestimos.html
+++ b/templates/aluno/emprestimos.html
@@ -1,4 +1,5 @@
 {% load static %}
+<link rel="stylesheet" href="{% static 'css/menuPrincipalAdm.css' %}">
 
 <div style="width: 1440px; height: 1024px; position: relative; background: white">
   <div
@@ -39,12 +40,12 @@
     <hr>
 
   </div>
-  <div style="width: 114px; height: 48px; left: 249px; top: 170px; position: absolute">
-    <div
-      style="width: 114px; height: 48px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 16px">
-    </div>
-    <div
-      style="width: 101.22px; height: 29px; left: 6px; top: 10px; position: absolute; color: black; font-size: 36px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-      <a href="{% url 'menuAluno' %}">Voltar</a>
+
+</div>
+
+
+<div style="width: 114px; height: 48px; left: 479px; top: 111px; position: absolute">
+    <div>
+      <a style="text-decoration: none;" class="logoutBtn" href="{% url 'buscarLivros' %}">Voltar</a>
   </div>
 </div>
